fix stats result bug and little changes in zones block
